# hbot

./: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
hbot/: __init__.py  __main__.py  base_plugin.py  coloured_logging_setup.py  main.py  plugins_loader.py
hbot/plugins/: README.md  gemini.py  help.py  maintenance.py  moderation.py  ping.py  rm6785.py  solat.py  ziptools.py
